@@ -1,9 +1,0 @@
-[Desktop Entry]
-Name=Network Locations
-Comment=Create, edit, delete and switch locations.
-Categories=GNOME;GTK;Application;System;Settings;
-Exec=nwam-manager-properties -l
-Icon=network-location.png
-StartupNotify=true
-Terminal=false
-Type=Application
