@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=Network Auto-magic Manager applet
 Comment=Show network status and config network
 Icon=network-location
-Exec=@LIBEXECDIR@/@PROGRAM@
+Exec=@LIBEXECDIR@/nwam-manager
 Terminal=false
 Type=Application
 Categories=
