@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=Network
 Comment=Configure network devices and connections
 Icon=preferences-system-network.png
-Exec=nwam-manager-properties
+Exec=@BINDIR@/nwam-manager-properties
 StartupNotify=true
 Terminal=false
 Type=Application
